# oop-joc

./: CMakeLists.txt  README.md  main.cpp  openup.txt  tastatura.txt
.github/workflows/: cmake.yml
src/include/: Enemy.hpp  GameScene.hpp  MenuScene.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  button.hpp  player.hpp
src/src/: Button.cpp  Enemy.cpp  GameScene.cpp  MenuScene.cpp  Player.cpp  ResourceManager.cpp  SceneManager.cpp
